Added error response, cleaned up docs
