# docs/swagger.json
@@ -36,10 +36,9 @@
                 "operationId": "next-question",
                 "parameters": [
                     {
-                        "description": "value",
+                        "description": "Journey 1",
                         "name": "NextQuestion",
                         "in": "body",
-                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/bindings.NextQuestionRequest"
                         }
@@ -55,19 +54,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/renderings.NextQuestionResponse"
+                            "$ref": "#/definitions/renderings.QPSError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/renderings.NextQuestionResponse"
+                            "$ref": "#/definitions/renderings.QPSError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/renderings.NextQuestionResponse"
+                            "$ref": "#/definitions/renderings.QPSError"
                         }
                     }
                 }
@@ -78,7 +77,51 @@
         "bindings.NextQuestionRequest": {
             "type": "object",
             "properties": {
-                "key": {
+                "benefit_list": {
+                    "description": "Array of specific benefits to get the questions for",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "client_response": {
+                    "description": "List of answered priority questions",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Question"
+                    }
+                },
+                "life_journeys": {
+                    "description": "Array of life journeys, which represent a subset of benefits",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "request_date": {
+                    "description": "Date period for request in ms since epoch",
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Benefit": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "is_eligible": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.Question": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 }
             }
@@ -86,14 +129,45 @@
         "renderings.NextQuestionResponse": {
             "type": "object",
             "properties": {
-                "key": {
-                    "type": "string"
+                "benefit_eligibility": {
+                    "description": "List of eligible and non-eligible benefits, populated as responses to\nprioritized questions are received",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Benefit"
+                    }
                 },
-                "message": {
-                    "type": "string"
+                "benefit_list": {
+                    "description": "Array of specific benefits to get the questions for",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
-                "success": {
-                    "type": "boolean"
+                "client_response": {
+                    "description": "List of answered priority questions with their answers and the next priority\nquestion with a value of null",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Question"
+                    }
+                },
+                "life_journeys": {
+                    "description": "Array of life journeys, which represent a subset of benefits",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "request_date": {
+                    "description": "Date period for request in ms since epoch",
+                    "type": "integer"
+                }
+            }
+        },
+        "renderings.QPSError": {
+            "type": "object",
+            "properties": {
+                "error_code": {
+                    "type": "string"
                 }
             }
         }
